# OOP_Lab1

./: CMakeLists.txt  main.cpp  readme.md  solution.cpp  solution.h  test.cpp
